2008-11-20  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Fix non-recoverable thresholds
	output corner case.
	
2008-11-20  Albert Chu <chu11@llnl.gov>

	* common/src/toolcommon/tool-fiid-wrappers.h (_FIID_OBJ_SET): New
	macro.

	* common/src/toolcommon/tool-sdr-cache-common.h,
	common/src/toolcommon/tool-sdr-cache-common.c
	(sdr_cache_get_thresholds_raw): New function.
	
	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(_get_sdr_sensor_thresholds): New function.

	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Workaround motherboards w/o get
	sensor thresholds command support.

	* ipmi-sensors-config/src/ipmi-sensors-config-threshold-section.c
	(threshold_checkout): Workaround motherboards w/o get sensor
	thresholds command support.

	* doc/freeipmi-bugs-and-workarounds.txt: Document new workaround.

2008-11-19  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Add power unit device install interpretation.

	* ipmimonitoring/src/ipmimonitoring/ipmi_monitoring_sensor_config.c:
	Fix invalid config option names for slot device installs sensors.

	* ipmimonitoring/ipmimonitoring.8.pre.in: Add extra documentation.
	
2008-11-19  Albert Chu <chu11@llnl.gov>

	* bmc-info/src/bmc-info.c (display_get_device_id): Optionally
	display auxiliary information.
	
2008-11-17  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw-argp.c, ipmi-raw/ipmi-raw.8.pre.in:
	Clarify usage.

	* common/src/toolcommon/tool-cmdline-common.c
	(cmdline_config_file_parse): Fix corner case parsing bug.
	
2008-11-10  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-verbose-display.c
	(_output_verbose_header),
	ipmi-sensors/src/ipmi-sensors-very-verbose-display.c
	(_output_very_verbose_header): Fix semantic issue with verbose
	output by clearly outputting sensor owner ID vs. slave
	address/system software ID.
	
2008-11-07  Albert Chu <chu11@llnl.gov>
